--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"pm2 start server.js "
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
+    "pm2": "^5.3.1",
     "razorpay": "^2.9.2",
     "request": "^2.88.2",
     "sqlite3": "^5.1.7"
