--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"pm2 start server.js "
+    "start": "pm2 start server.js "
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,11 @@
   "dependencies": {
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "passport-zoho-crm": "^0.1.3",
     "pm2": "^5.3.1",
     "razorpay": "^2.9.2",
     "request": "^2.88.2",
