--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pm2": "^5.3.1",
     "razorpay": "^2.9.2",
     "request": "^2.88.2",
+    "sequelize": "^6.37.3",
     "sqlite3": "^5.1.7"
   }
 }
